@startuml
skinparam classAttributeIconSize 0

' <<internal>> helper class (optional)
class "_Rules" <<internal>> {
  +email: EmailStr?
  +phone: str?
  +name: str?
  +address: str?
  +birthdate: date?
  +company_number: str?
  +password: str?
}

class Validator <<utility>> {
  +validate_email(v: EmailStr | str): str
  +validate_phone(v: str): str
  +validate_name(v: str): str
  +validate_address(v: str): str
  +validate_birthdate(v: date | str): date
  +validate_company_number(v: str): str
  +validate_password(v: str): str
  -_short_err(err: ValidationError, field_label: str): None
}

class Customer {
  -__password: str
  -_name: str
  -_address: str
  -_email: str
  -_phone: str
  --
  {static} next_id: int
  --
  +id: int {readOnly}
  +__init__(name: str, address: str, email: str, phone: str, password: str)
  +name: str {property get/set}
  +address: str {property get/set}
  +email: str {property get/set}
  +phone: str {property get/set}
  +get_password_masked(): str
  +set_password(password: str): None
  +__str__(): str
}

class PrivateCustomer {
  -_birthdate: date
  +__init__(name: str, address: str, email: str, phone: str, password: str, birthdate: date | str)
  +birthdate: date {property get/set}
  +calculate_age(): int
  +__str__(): str
}

class CompanyCustomer {
  -_company_number: str
  +__init__(name: str, address: str, email: str, phone: str, password: str, company_number: str)
  +company_number: str {property get/set}
  +__str__(): str
}

' Inheritance
PrivateCustomer --|> Customer
CompanyCustomer --|> Customer

' Validator usage
Customer ..> Validator : uses
PrivateCustomer ..> Validator : uses
CompanyCustomer ..> Validator : uses

' Optional: _Rules is used inside Validator
Validator ..> "_Rules" : validates with

@enduml
